<resources>
    <string name="app_name">WinNative</string>
    <string name="run">Run</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="containers">Containers</string>
    <string name="input_controls">Input Controls</string>
    <string name="no_items_to_display">No items to display</string>
    <string name="new_container">New Container</string>
    <string name="select_icon">Select Icon</string>
    <string name="revert_icon">Revert Icon</string>
    <string name="select_exe">Select EXE</string>
    <string name="select_valid_exe_file">Please select a valid .exe file</string>
    <string name="select_valid_icon_file">Please select a valid .ico or .png file.</string>
    <string name="edit_container">Edit Container</string>
    <string name="creating_container">Creating Container…</string>
    <string name="removing_container">Removing Container…</string>
    <string name="duplicating_container">Duplicating Container…</string>
    <string name="installing_system_files">Installing System Files…</string>
    <string name="unable_to_install_system_files">Unable to install system files</string>
    <string name="keyboard">Keyboard</string>
    <string name="toggle_fullscreen">Toggle Fullscreen</string>
    <string name="exit">Exit</string>
    <string name="no_control_element_selected">No control element selected</string>
    <string name="scale">Scale</string>
    <string name="shape">Shape</string>
    <string name="type">Type</string>
    <string name="binding">Binding</string>
    <string name="binding_up">Binding Up</string>
    <string name="binding_right">Binding Right</string>
    <string name="binding_down">Binding Down</string>
    <string name="binding_left">Binding Left</string>
    <string name="overlay_opacity">Overlay Opacity</string>
    <string name="profile">Profile</string>
    <string name="select_profile">Select Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="untitled">Untitled</string>
    <string name="no_profile_selected">No profile selected</string>
    <string name="no_profile_found">No profile found</string>
    <string name="do_you_want_to_remove_this_profile">Do you want to remove this profile?</string>
    <string name="do_you_want_to_duplicate_this_profile">Do you want to duplicate this profile?</string>
    <string name="do_you_want_to_duplicate_this_preset">Do you want to duplicate this preset?</string>
    <string name="do_you_want_to_remove_this_container">Do you want to remove this container?</string>
    <string name="do_you_want_to_duplicate_this_container">Do you want to duplicate this container?</string>
    <string name="do_you_want_to_remove_this_shortcut">Do you want to remove this shortcut?</string>
    <string name="do_you_want_to_remove_this_controller">Do you want to remove this controller?</string>
    <string name="do_you_want_to_remove_this_preset">Do you want to remove this preset?</string>
    <string name="do_you_want_to_end_this_process">Do you want to end this process?</string>
    <string name="controls_editor">Controls Editor</string>
    <string name="disabled">Disabled</string>
    <string name="container">Container</string>
    <string name="screen_size">Screen Size</string>
    <string name="new_environment_variable">New Environment Variable</string>
    <string name="environment_variables">Environment Variables</string>
    <string name="value">Value</string>
    <string name="processor_affinity">Processor Affinity</string>
    <string name="processor_affinity_32_bit_apps">Processor Affinity (32-bit apps)</string>
    <string name="cursor_speed">Cursor Speed</string>
    <string name="toggle_switch">Toggle Switch</string>
    <string name="profile_exported_to">Profile exported to</string>
    <string name="unable_to_import_profile">Unable to import profile</string>
    <string name="wine_configuration">Wine Configuration</string>
    <string name="csmt">CSMT (Command Stream Multi-Thread)</string>
    <string name="gpu_name">GPU Name</string>
    <string name="offscreen_rendering_mode">Offscreen Rendering Mode</string>
    <string name="strict_shader_math">Strict Shader Math</string>
    <string name="video_memory_size">Video Memory Size</string>
    <string name="show_fps">Show FPS</string>
    <string name="none">None</string>
    <string name="custom_text">Custom Text</string>
    <string name="icon">Icon</string>
    <string name="import_profile">Import Profile</string>
    <string name="export_profile">Export Profile</string>
    <string name="duplicate">Duplicate</string>
    <string name="credits_and_third_party_apps">Credits and Third-party apps</string>
    <string name="external_controllers">External Controllers</string>
    <string name="graphics_driver">Graphics Driver</string>
    <string name="audio_driver">Audio Driver</string>
    <string name="loading">Loading…</string>
    <string name="press_any_button_on_your_controller">Press any button on your controller</string>
    <string name="bindings">bindings</string>
    <string name="control_bindings">Control Bindings</string>
    <string name="show_touchscreen_controls">Show Touchscreen Controls</string>
    <string name="dxwrapper">DX Wrapper</string>
    <string name="mouse_warp_override">Mouse Warp Override</string>
    <string name="directx">DirectX</string>
    <string name="presets">Presets</string>
    <string name="exec_arguments">Exec Arguments</string>
    <string name="win_components">Win Components</string>
    <string name="drives">Drives</string>
    <string name="range">Range</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="force">Force</string>
    <string name="arch">Arch</string>
    <string name="version">Version</string>
    <string name="dxvk_version">DXVK Version</string>
    <string name="vkd3d_version">VKD3D Version</string>
    <string name="wine_version">Wine Version</string>
    <string name="storage_info">Storage Info</string>
    <string name="drive_c">Drive C:</string>
    <string name="cache">Cache</string>
    <string name="total">Total</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="estimated_used_space">Estimated Used Space</string>
    <string name="advanced">Advanced</string>
    <string name="box64">Box64</string>
    <string name="system">System</string>
    <string name="box64_preset">Box64 Preset</string>
    <string name="box64_version">Box64 Version</string>
    <string name="target_path">Target Path</string>
    <string name="xserver">XServer</string>
    <string name="use_dri3_extension">Use DRI3 extension</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="task_manager">Task Manager</string>
    <string name="process_name">Process Name</string>
    <string name="pid">PID</string>
    <string name="memory">Memory</string>
    <string name="end_process">End Process</string>
    <string name="new_task">New Task</string>
    <string name="processes">Processes</string>
    <string name="orientation">Orientation</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="open_file">Open File</string>
    <string name="download_file">Download File</string>
    <string name="do_you_want_to_download_the_selected_profiles">Do you want to download the selected profiles?</string>
    <string name="downloading_file">Downloading File...</string>
    <string name="unable_to_load_profile_list">Unable to load profile list</string>
    <string name="stability">Stability</string>
    <string name="compatibility">Compatibility</string>
    <string name="intermediate">Intermediate</string>
    <string name="performance">Performance</string>
    <string name="preset">Preset</string>
    <string name="new_preset">New Preset</string>
    <string name="rename_preset">Rename Preset</string>
    <string name="import_preset">Import Preset</string>
    <string name="custom_preset">Custom</string>
    <string name="built_in_preset">Built-In</string>
    <string name="preset_changes_auto_saved">Changes save automatically while editing this custom preset.</string>
    <string name="preset_builtin_readonly_hint">Built-in presets are read-only. Create or duplicate a preset to customize these variables.</string>
    <string name="cannot_rename_this_preset">Built-in presets cannot be renamed</string>
    <string name="unable_to_import_preset">Unable to import preset</string>
    <string name="no_description_available">No description available</string>
    <string name="you_cannot_remove_this_preset">You cannot remove this preset</string>
    <string name="dxwrapper_help_content">
        &lt;i&gt;&lt;b&gt;WineD3D&lt;/b&gt;&lt;/i&gt; is a translation layer for DirectX 1-11 to OpenGL.&lt;br /&gt;&lt;br /&gt;
        &lt;i&gt;&lt;b&gt;DXVK&lt;/b&gt;&lt;/i&gt; is a translation layer for Direct3D 9-11 to Vulkan.&lt;br /&gt;&lt;br /&gt;
        &lt;i&gt;&lt;b&gt;VKD3D&lt;/b&gt;&lt;/i&gt; is a translation layer for Direct3D 12 API to Vulkan.&lt;br /&gt;&lt;br /&gt;
        &lt;i&gt;&lt;b&gt;CNC DDraw&lt;/b&gt;&lt;/i&gt; is an implementation of DirectDraw for better compatibility with classic games.
    </string>
    <string name="columns">Columns</string>
    <string name="directinput_mapper_type">DirectInput Mapper Type</string>
    <string name="theme">Theme</string>
    <string name="background">Background</string>
    <string name="frame_rate">Frame Rate</string>
    <string name="configuration">Configuration</string>
    <string name="browse">Browse</string>
    <string name="magnifier">Magnifier</string>
    <string name="bring_to_front">Bring to Front</string>
    <string name="options">Options</string>
    <string name="logs">Logs</string>
    <string name="export">Export</string>
    <string name="general">General</string>
    <string name="startup_selection">Startup Selection</string>
    <string name="wine_debug_channel">Wine Debug Channel</string>
    <string name="game_controller">Game Controller</string>
    <string name="as_button">Is Button</string>
    <string name="as_axis">Is Axis</string>
    <string name="trigger_type">Type</string>
    <string name="glibc_exp_edition">Based On</string>
    <string name="enabled_async">Enable Async</string>
    <string name="enabled_async_cache">Enable Async Cache</string>
    <string name="vkd3d_feature_level">VKD3D Feature Level</string>
    <string name="new_file">New File</string>
    <string name="simulate_touch_screen">Simulate touch screen</string>
    <string name="install_content">Install Content</string>
    <string name="content_type">Content Type</string>
    <string name="settings_debug_title">Debug</string>
    <string name="settings_debug_wine_logs_title">Enable Wine Debug Logs</string>
    <string name="settings_debug_wine_logs_subtitle">Write Wine debug output to file</string>
    <string name="settings_debug_box_logs_title">Enable Box86/64 Logs</string>
    <string name="settings_debug_box_logs_subtitle">Write Box86 &amp; Box64 debug output to file</string>
    <string name="settings_debug_fex_logs_title">Enable FEXCore Logs</string>
    <string name="settings_debug_fex_logs_subtitle">Write FEXCore debug output to file</string>
    <string name="settings_debug_steam_logs_title">Enable Steam Logs</string>
    <string name="settings_debug_steam_logs_subtitle">Log Steam authentication and session events for debugging.</string>
    <string name="advanced_wine_channels_title">Wine Debug Channels</string>
    <string name="advanced_wine_channels_summary">Choose which Wine channels are included when Wine debug logging is enabled.</string>
</resources>